--- a/plugin.video.semper_video/changelog.txt
+++ b/plugin.video.semper_video/changelog.txt
@@ -1,2 +1,3 @@
-HSK VIDEO ADDON VERSION 1.0.2 BY Kodiman / HSK
+SEMPER VIDEO ADDON VERSION 1.0.2 BY Kodiman / HSK
+v. 1.0.6: zwei weitere kategorien eingefügt
 
