Update HSK Wizard

--- a/plugin.program.hskwizard/changelog.txt
+++ b/plugin.program.hskwizard/changelog.txt
@@ -1,1 +1,5 @@
-Version V 1.0.7 by Loki1979 HSK-DE
+Version V 1.1.4 by Loki1979
+
+Facebook Gruppe :
+Hardware - Software - Kodi - DE :
+https://www.facebook.com/groups/hskde/
